--- a/public/index.html
+++ b/public/index.html
@@ -41,19 +41,16 @@
     -->
 <script>
   window.watsonAssistantChatOptions = {
-    integrationID: "0b08c9b4-15d7-45f9-be9b-2892f6011d97", // Your integration ID
-    region: "eu-de", // Your region
-    serviceInstanceID: "5b8231fe-1139-4ef9-8b41-481151c85904", // Your service instance ID
-    onLoad: function(instance) { instance.render(); }
+    integrationID: "0b08c9b4-15d7-45f9-be9b-2892f6011d97", // The ID of this integration.
+    region: "eu-de", // The region your integration is hosted in.
+    serviceInstanceID: "5b8231fe-1139-4ef9-8b41-481151c85904", // The ID of your service instance.
+    onLoad: async (instance) => { await instance.render(); }
   };
-  
-  setTimeout(function () {
-    const t = document.createElement('script');
-    t.src = "https://web-chat.global.assistant.watson.appdomain.cloud/versions/latest/WatsonAssistantChatEntry.js";
+  setTimeout(function(){
+    const t=document.createElement('script');
+    t.src="https://web-chat.global.assistant.watson.appdomain.cloud/versions/" + (window.watsonAssistantChatOptions.clientVersion || 'latest') + "/WatsonAssistantChatEntry.js";
     document.head.appendChild(t);
-  }, 0);
+  });
 </script>
-
-  </script>
   </body>
 </html>
